<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_children"
        android:icon="@drawable/ic_nav_children"
        android:title="@string/nav_children" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_nav_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
